--- a/package-index/index.html
+++ b/package-index/index.html
@@ -1,6 +1,18 @@
 <!DOCTYPE html>
 <html>
   <body>
+    <a href='https://github.com/llvm/torch-mlir/releases/download/oneshot-20230306.99/torch-2.1.0.dev20230305%2Bcpu-cp310-cp310-linux_x86_64.whl'>torch-2.1.0.dev20230305+cpu-cp310-cp310-linux_x86_64.whl</a><br />
+    <a href='https://github.com/llvm/torch-mlir/releases/download/oneshot-20230306.99/torch-2.1.0.dev20230305%2Bcpu-cp311-cp311-linux_x86_64.whl'>torch-2.1.0.dev20230305+cpu-cp311-cp311-linux_x86_64.whl</a><br />
+    <a href='https://github.com/llvm/torch-mlir/releases/download/oneshot-20230306.99/torch-2.1.0.dev20230305%2Bcpu-cp311-cp311-win_amd64.whl'>torch-2.1.0.dev20230305+cpu-cp311-cp311-win_amd64.whl</a><br />
+    <a href='https://github.com/llvm/torch-mlir/releases/download/oneshot-20230306.99/torch-2.1.0.dev20230305%2Bcpu-cp38-cp38-linux_x86_64.whl'>torch-2.1.0.dev20230305+cpu-cp38-cp38-linux_x86_64.whl</a><br />
+    <a href='https://github.com/llvm/torch-mlir/releases/download/oneshot-20230306.99/torch-2.1.0.dev20230305-cp311-none-macosx_10_9_x86_64.whl'>torch-2.1.0.dev20230305-cp311-none-macosx_10_9_x86_64.whl</a><br />
+    <a href='https://github.com/llvm/torch-mlir/releases/download/oneshot-20230306.99/torch_mlir-20230306.99-cp310-cp310-linux_x86_64.whl'>torch_mlir-20230306.99-cp310-cp310-linux_x86_64.whl</a><br />
+    <a href='https://github.com/llvm/torch-mlir/releases/download/oneshot-20230306.99/torch_mlir-20230306.99-cp311-cp311-linux_x86_64.whl'>torch_mlir-20230306.99-cp311-cp311-linux_x86_64.whl</a><br />
+    <a href='https://github.com/llvm/torch-mlir/releases/download/oneshot-20230306.99/torch_mlir-20230306.99-cp311-cp311-macosx_11_0_universal2.whl'>torch_mlir-20230306.99-cp311-cp311-macosx_11_0_universal2.whl</a><br />
+    <a href='https://github.com/llvm/torch-mlir/releases/download/oneshot-20230306.99/torch_mlir-20230306.99-cp311-cp311-win_amd64.whl'>torch_mlir-20230306.99-cp311-cp311-win_amd64.whl</a><br />
+    <a href='https://github.com/llvm/torch-mlir/releases/download/oneshot-20230306.99/torch_mlir-20230306.99-cp38-cp38-linux_x86_64.whl'>torch_mlir-20230306.99-cp38-cp38-linux_x86_64.whl</a><br />
+    <a href='https://github.com/llvm/torch-mlir/releases/download/oneshot-20230306.99/torch_mlir_no_jit-20230306.99-cp311-cp311-macosx_11_0_universal2.whl'>torch_mlir_no_jit-20230306.99-cp311-cp311-macosx_11_0_universal2.whl</a><br />
+    <a href='https://github.com/llvm/torch-mlir/releases/download/oneshot-20230306.99/torch_mlir_no_jit-20230306.99-cp311-cp311-manylinux_2_17_x86_64.manylinux2014_x86_64.whl'>torch_mlir_no_jit-20230306.99-cp311-cp311-manylinux_2_17_x86_64.manylinux2014_x86_64.whl</a><br />
     <a href='https://github.com/llvm/torch-mlir/releases/download/oneshot-20230305.89/torch-2.1.0.dev20230305%2Bcpu-cp311-cp311-win_amd64.whl'>torch-2.1.0.dev20230305+cpu-cp311-cp311-win_amd64.whl</a><br />
     <a href='https://github.com/llvm/torch-mlir/releases/download/oneshot-20230305.89/torch_mlir-20230305.89-cp311-cp311-win_amd64.whl'>torch_mlir-20230305.89-cp311-cp311-win_amd64.whl</a><br />
     <a href='https://github.com/llvm/torch-mlir/releases/download/oneshot-20230305.89/torch_mlir_no_jit-20230305.89-cp310-cp310-manylinux_2_17_x86_64.manylinux2014_x86_64.whl'>torch_mlir_no_jit-20230305.89-cp310-cp310-manylinux_2_17_x86_64.manylinux2014_x86_64.whl</a><br />
@@ -251,13 +263,5 @@
     <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20230209.744/torch_mlir-20230209.744-cp310-cp310-macosx_11_0_universal2.whl'>torch_mlir-20230209.744-cp310-cp310-macosx_11_0_universal2.whl</a><br />
     <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20230209.744/torch_mlir-20230209.744-cp310-cp310-win_amd64.whl'>torch_mlir-20230209.744-cp310-cp310-win_amd64.whl</a><br />
     <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20230209.744/torch_mlir-20230209.744-cp38-cp38-linux_x86_64.whl'>torch_mlir-20230209.744-cp38-cp38-linux_x86_64.whl</a><br />
-    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20230208.743/torch-2.0.0.dev20230207%2Bcpu-cp310-cp310-linux_x86_64.whl'>torch-2.0.0.dev20230207+cpu-cp310-cp310-linux_x86_64.whl</a><br />
-    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20230208.743/torch-2.0.0.dev20230207%2Bcpu-cp310-cp310-win_amd64.whl'>torch-2.0.0.dev20230207+cpu-cp310-cp310-win_amd64.whl</a><br />
-    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20230208.743/torch-2.0.0.dev20230207%2Bcpu-cp38-cp38-linux_x86_64.whl'>torch-2.0.0.dev20230207+cpu-cp38-cp38-linux_x86_64.whl</a><br />
-    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20230208.743/torch-2.0.0.dev20230207-cp310-none-macosx_10_9_x86_64.whl'>torch-2.0.0.dev20230207-cp310-none-macosx_10_9_x86_64.whl</a><br />
-    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20230208.743/torch_mlir-20230208.743-cp310-cp310-linux_x86_64.whl'>torch_mlir-20230208.743-cp310-cp310-linux_x86_64.whl</a><br />
-    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20230208.743/torch_mlir-20230208.743-cp310-cp310-macosx_11_0_universal2.whl'>torch_mlir-20230208.743-cp310-cp310-macosx_11_0_universal2.whl</a><br />
-    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20230208.743/torch_mlir-20230208.743-cp310-cp310-win_amd64.whl'>torch_mlir-20230208.743-cp310-cp310-win_amd64.whl</a><br />
-    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20230208.743/torch_mlir-20230208.743-cp38-cp38-linux_x86_64.whl'>torch_mlir-20230208.743-cp38-cp38-linux_x86_64.whl</a><br />
   </body>
 </html>
