--- a/package-index/index.html
+++ b/package-index/index.html
@@ -1,6 +1,18 @@
 <!DOCTYPE html>
 <html>
   <body>
+    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20230306.769/torch-2.1.0.dev20230305%2Bcpu-cp310-cp310-linux_x86_64.whl'>torch-2.1.0.dev20230305+cpu-cp310-cp310-linux_x86_64.whl</a><br />
+    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20230306.769/torch-2.1.0.dev20230305%2Bcpu-cp311-cp311-linux_x86_64.whl'>torch-2.1.0.dev20230305+cpu-cp311-cp311-linux_x86_64.whl</a><br />
+    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20230306.769/torch-2.1.0.dev20230305%2Bcpu-cp311-cp311-win_amd64.whl'>torch-2.1.0.dev20230305+cpu-cp311-cp311-win_amd64.whl</a><br />
+    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20230306.769/torch-2.1.0.dev20230305%2Bcpu-cp38-cp38-linux_x86_64.whl'>torch-2.1.0.dev20230305+cpu-cp38-cp38-linux_x86_64.whl</a><br />
+    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20230306.769/torch-2.1.0.dev20230305-cp311-none-macosx_10_9_x86_64.whl'>torch-2.1.0.dev20230305-cp311-none-macosx_10_9_x86_64.whl</a><br />
+    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20230306.769/torch_mlir-20230306.769-cp310-cp310-linux_x86_64.whl'>torch_mlir-20230306.769-cp310-cp310-linux_x86_64.whl</a><br />
+    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20230306.769/torch_mlir-20230306.769-cp311-cp311-linux_x86_64.whl'>torch_mlir-20230306.769-cp311-cp311-linux_x86_64.whl</a><br />
+    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20230306.769/torch_mlir-20230306.769-cp311-cp311-macosx_11_0_universal2.whl'>torch_mlir-20230306.769-cp311-cp311-macosx_11_0_universal2.whl</a><br />
+    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20230306.769/torch_mlir-20230306.769-cp311-cp311-win_amd64.whl'>torch_mlir-20230306.769-cp311-cp311-win_amd64.whl</a><br />
+    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20230306.769/torch_mlir-20230306.769-cp38-cp38-linux_x86_64.whl'>torch_mlir-20230306.769-cp38-cp38-linux_x86_64.whl</a><br />
+    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20230306.769/torch_mlir_no_jit-20230306.769-cp311-cp311-macosx_11_0_universal2.whl'>torch_mlir_no_jit-20230306.769-cp311-cp311-macosx_11_0_universal2.whl</a><br />
+    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20230306.769/torch_mlir_no_jit-20230306.769-cp311-cp311-manylinux_2_17_x86_64.manylinux2014_x86_64.whl'>torch_mlir_no_jit-20230306.769-cp311-cp311-manylinux_2_17_x86_64.manylinux2014_x86_64.whl</a><br />
     <a href='https://github.com/llvm/torch-mlir/releases/download/oneshot-20230306.99/torch-2.1.0.dev20230305%2Bcpu-cp310-cp310-linux_x86_64.whl'>torch-2.1.0.dev20230305+cpu-cp310-cp310-linux_x86_64.whl</a><br />
     <a href='https://github.com/llvm/torch-mlir/releases/download/oneshot-20230306.99/torch-2.1.0.dev20230305%2Bcpu-cp311-cp311-linux_x86_64.whl'>torch-2.1.0.dev20230305+cpu-cp311-cp311-linux_x86_64.whl</a><br />
     <a href='https://github.com/llvm/torch-mlir/releases/download/oneshot-20230306.99/torch-2.1.0.dev20230305%2Bcpu-cp311-cp311-win_amd64.whl'>torch-2.1.0.dev20230305+cpu-cp311-cp311-win_amd64.whl</a><br />
@@ -255,13 +267,5 @@
     <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20230210.745/torch_mlir-20230210.745-cp310-cp310-macosx_11_0_universal2.whl'>torch_mlir-20230210.745-cp310-cp310-macosx_11_0_universal2.whl</a><br />
     <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20230210.745/torch_mlir-20230210.745-cp310-cp310-win_amd64.whl'>torch_mlir-20230210.745-cp310-cp310-win_amd64.whl</a><br />
     <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20230210.745/torch_mlir-20230210.745-cp38-cp38-linux_x86_64.whl'>torch_mlir-20230210.745-cp38-cp38-linux_x86_64.whl</a><br />
-    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20230209.744/torch-2.0.0.dev20230208%2Bcpu-cp310-cp310-linux_x86_64.whl'>torch-2.0.0.dev20230208+cpu-cp310-cp310-linux_x86_64.whl</a><br />
-    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20230209.744/torch-2.0.0.dev20230208%2Bcpu-cp310-cp310-win_amd64.whl'>torch-2.0.0.dev20230208+cpu-cp310-cp310-win_amd64.whl</a><br />
-    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20230209.744/torch-2.0.0.dev20230208%2Bcpu-cp38-cp38-linux_x86_64.whl'>torch-2.0.0.dev20230208+cpu-cp38-cp38-linux_x86_64.whl</a><br />
-    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20230209.744/torch-2.0.0.dev20230208-cp310-none-macosx_10_9_x86_64.whl'>torch-2.0.0.dev20230208-cp310-none-macosx_10_9_x86_64.whl</a><br />
-    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20230209.744/torch_mlir-20230209.744-cp310-cp310-linux_x86_64.whl'>torch_mlir-20230209.744-cp310-cp310-linux_x86_64.whl</a><br />
-    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20230209.744/torch_mlir-20230209.744-cp310-cp310-macosx_11_0_universal2.whl'>torch_mlir-20230209.744-cp310-cp310-macosx_11_0_universal2.whl</a><br />
-    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20230209.744/torch_mlir-20230209.744-cp310-cp310-win_amd64.whl'>torch_mlir-20230209.744-cp310-cp310-win_amd64.whl</a><br />
-    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20230209.744/torch_mlir-20230209.744-cp38-cp38-linux_x86_64.whl'>torch_mlir-20230209.744-cp38-cp38-linux_x86_64.whl</a><br />
   </body>
 </html>
