--- a/package-index/index.html
+++ b/package-index/index.html
@@ -1,6 +1,19 @@
 <!DOCTYPE html>
 <html>
   <body>
+    <a href='https://github.com/llvm/torch-mlir/releases/download/oneshot-20230307.104/torch-2.1.0.dev20230306%2Bcpu-cp310-cp310-linux_x86_64.whl'>torch-2.1.0.dev20230306+cpu-cp310-cp310-linux_x86_64.whl</a><br />
+    <a href='https://github.com/llvm/torch-mlir/releases/download/oneshot-20230307.104/torch-2.1.0.dev20230306%2Bcpu-cp311-cp311-linux_x86_64.whl'>torch-2.1.0.dev20230306+cpu-cp311-cp311-linux_x86_64.whl</a><br />
+    <a href='https://github.com/llvm/torch-mlir/releases/download/oneshot-20230307.104/torch-2.1.0.dev20230306%2Bcpu-cp311-cp311-win_amd64.whl'>torch-2.1.0.dev20230306+cpu-cp311-cp311-win_amd64.whl</a><br />
+    <a href='https://github.com/llvm/torch-mlir/releases/download/oneshot-20230307.104/torch-2.1.0.dev20230306%2Bcpu-cp38-cp38-linux_x86_64.whl'>torch-2.1.0.dev20230306+cpu-cp38-cp38-linux_x86_64.whl</a><br />
+    <a href='https://github.com/llvm/torch-mlir/releases/download/oneshot-20230307.104/torch-2.1.0.dev20230306-cp311-none-macosx_10_9_x86_64.whl'>torch-2.1.0.dev20230306-cp311-none-macosx_10_9_x86_64.whl</a><br />
+    <a href='https://github.com/llvm/torch-mlir/releases/download/oneshot-20230307.104/torch_mlir-20230307.104-cp310-cp310-linux_x86_64.whl'>torch_mlir-20230307.104-cp310-cp310-linux_x86_64.whl</a><br />
+    <a href='https://github.com/llvm/torch-mlir/releases/download/oneshot-20230307.104/torch_mlir-20230307.104-cp311-cp311-linux_x86_64.whl'>torch_mlir-20230307.104-cp311-cp311-linux_x86_64.whl</a><br />
+    <a href='https://github.com/llvm/torch-mlir/releases/download/oneshot-20230307.104/torch_mlir-20230307.104-cp311-cp311-macosx_11_0_universal2.whl'>torch_mlir-20230307.104-cp311-cp311-macosx_11_0_universal2.whl</a><br />
+    <a href='https://github.com/llvm/torch-mlir/releases/download/oneshot-20230307.104/torch_mlir-20230307.104-cp311-cp311-win_amd64.whl'>torch_mlir-20230307.104-cp311-cp311-win_amd64.whl</a><br />
+    <a href='https://github.com/llvm/torch-mlir/releases/download/oneshot-20230307.104/torch_mlir-20230307.104-cp38-cp38-linux_x86_64.whl'>torch_mlir-20230307.104-cp38-cp38-linux_x86_64.whl</a><br />
+    <a href='https://github.com/llvm/torch-mlir/releases/download/oneshot-20230307.104/torch_mlir_core-20230307.104-cp311-cp311-macosx_11_0_universal2.whl'>torch_mlir_core-20230307.104-cp311-cp311-macosx_11_0_universal2.whl</a><br />
+    <a href='https://github.com/llvm/torch-mlir/releases/download/oneshot-20230307.104/torch_mlir_core-20230307.104-cp311-cp311-manylinux_2_17_x86_64.manylinux2014_x86_64.whl'>torch_mlir_core-20230307.104-cp311-cp311-manylinux_2_17_x86_64.manylinux2014_x86_64.whl</a><br />
+    <a href='https://github.com/llvm/torch-mlir/releases/download/oneshot-20230307.104/torch_mlir_core-20230307.104-cp311-cp311-win_amd64.whl'>torch_mlir_core-20230307.104-cp311-cp311-win_amd64.whl</a><br />
     <a href='https://github.com/llvm/torch-mlir/releases/download/oneshot-20230307.103/torch-2.1.0.dev20230306%2Bcpu-cp310-cp310-linux_x86_64.whl'>torch-2.1.0.dev20230306+cpu-cp310-cp310-linux_x86_64.whl</a><br />
     <a href='https://github.com/llvm/torch-mlir/releases/download/oneshot-20230307.103/torch-2.1.0.dev20230306%2Bcpu-cp311-cp311-linux_x86_64.whl'>torch-2.1.0.dev20230306+cpu-cp311-cp311-linux_x86_64.whl</a><br />
     <a href='https://github.com/llvm/torch-mlir/releases/download/oneshot-20230307.103/torch_mlir-20230307.103-cp310-cp310-linux_x86_64.whl'>torch_mlir-20230307.103-cp310-cp310-linux_x86_64.whl</a><br />
@@ -253,15 +266,5 @@
     <a href='https://github.com/llvm/torch-mlir/releases/download/oneshot-20230210.82/torch_mlir-20230210.82-cp311-cp311-macosx_11_0_universal2.whl'>torch_mlir-20230210.82-cp311-cp311-macosx_11_0_universal2.whl</a><br />
     <a href='https://github.com/llvm/torch-mlir/releases/download/oneshot-20230210.82/torch_mlir-20230210.82-cp311-cp311-win_amd64.whl'>torch_mlir-20230210.82-cp311-cp311-win_amd64.whl</a><br />
     <a href='https://github.com/llvm/torch-mlir/releases/download/oneshot-20230210.82/torch_mlir-20230210.82-cp38-cp38-linux_x86_64.whl'>torch_mlir-20230210.82-cp38-cp38-linux_x86_64.whl</a><br />
-    <a href='https://github.com/llvm/torch-mlir/releases/download/oneshot-20230210.81/torch-2.0.0.dev20230209%2Bcpu-cp310-cp310-linux_x86_64.whl'>torch-2.0.0.dev20230209+cpu-cp310-cp310-linux_x86_64.whl</a><br />
-    <a href='https://github.com/llvm/torch-mlir/releases/download/oneshot-20230210.81/torch-2.0.0.dev20230209%2Bcpu-cp310-cp310-win_amd64.whl'>torch-2.0.0.dev20230209+cpu-cp310-cp310-win_amd64.whl</a><br />
-    <a href='https://github.com/llvm/torch-mlir/releases/download/oneshot-20230210.81/torch-2.0.0.dev20230209%2Bcpu-cp311-cp311-linux_x86_64.whl'>torch-2.0.0.dev20230209+cpu-cp311-cp311-linux_x86_64.whl</a><br />
-    <a href='https://github.com/llvm/torch-mlir/releases/download/oneshot-20230210.81/torch-2.0.0.dev20230209%2Bcpu-cp38-cp38-linux_x86_64.whl'>torch-2.0.0.dev20230209+cpu-cp38-cp38-linux_x86_64.whl</a><br />
-    <a href='https://github.com/llvm/torch-mlir/releases/download/oneshot-20230210.81/torch-2.0.0.dev20230209-cp310-none-macosx_10_9_x86_64.whl'>torch-2.0.0.dev20230209-cp310-none-macosx_10_9_x86_64.whl</a><br />
-    <a href='https://github.com/llvm/torch-mlir/releases/download/oneshot-20230210.81/torch_mlir-20230210.81-cp310-cp310-linux_x86_64.whl'>torch_mlir-20230210.81-cp310-cp310-linux_x86_64.whl</a><br />
-    <a href='https://github.com/llvm/torch-mlir/releases/download/oneshot-20230210.81/torch_mlir-20230210.81-cp310-cp310-macosx_11_0_universal2.whl'>torch_mlir-20230210.81-cp310-cp310-macosx_11_0_universal2.whl</a><br />
-    <a href='https://github.com/llvm/torch-mlir/releases/download/oneshot-20230210.81/torch_mlir-20230210.81-cp310-cp310-win_amd64.whl'>torch_mlir-20230210.81-cp310-cp310-win_amd64.whl</a><br />
-    <a href='https://github.com/llvm/torch-mlir/releases/download/oneshot-20230210.81/torch_mlir-20230210.81-cp311-cp311-linux_x86_64.whl'>torch_mlir-20230210.81-cp311-cp311-linux_x86_64.whl</a><br />
-    <a href='https://github.com/llvm/torch-mlir/releases/download/oneshot-20230210.81/torch_mlir-20230210.81-cp38-cp38-linux_x86_64.whl'>torch_mlir-20230210.81-cp38-cp38-linux_x86_64.whl</a><br />
   </body>
 </html>
