--- a/package-index/index.html
+++ b/package-index/index.html
@@ -1,6 +1,19 @@
 <!DOCTYPE html>
 <html>
   <body>
+    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20230309.772/torch-2.1.0.dev20230308%2Bcpu-cp310-cp310-linux_x86_64.whl'>torch-2.1.0.dev20230308+cpu-cp310-cp310-linux_x86_64.whl</a><br />
+    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20230309.772/torch-2.1.0.dev20230308%2Bcpu-cp311-cp311-linux_x86_64.whl'>torch-2.1.0.dev20230308+cpu-cp311-cp311-linux_x86_64.whl</a><br />
+    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20230309.772/torch-2.1.0.dev20230308%2Bcpu-cp311-cp311-win_amd64.whl'>torch-2.1.0.dev20230308+cpu-cp311-cp311-win_amd64.whl</a><br />
+    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20230309.772/torch-2.1.0.dev20230308%2Bcpu-cp38-cp38-linux_x86_64.whl'>torch-2.1.0.dev20230308+cpu-cp38-cp38-linux_x86_64.whl</a><br />
+    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20230309.772/torch-2.1.0.dev20230308-cp311-none-macosx_10_9_x86_64.whl'>torch-2.1.0.dev20230308-cp311-none-macosx_10_9_x86_64.whl</a><br />
+    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20230309.772/torch_mlir-20230309.772-cp310-cp310-linux_x86_64.whl'>torch_mlir-20230309.772-cp310-cp310-linux_x86_64.whl</a><br />
+    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20230309.772/torch_mlir-20230309.772-cp311-cp311-linux_x86_64.whl'>torch_mlir-20230309.772-cp311-cp311-linux_x86_64.whl</a><br />
+    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20230309.772/torch_mlir-20230309.772-cp311-cp311-macosx_11_0_universal2.whl'>torch_mlir-20230309.772-cp311-cp311-macosx_11_0_universal2.whl</a><br />
+    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20230309.772/torch_mlir-20230309.772-cp311-cp311-win_amd64.whl'>torch_mlir-20230309.772-cp311-cp311-win_amd64.whl</a><br />
+    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20230309.772/torch_mlir-20230309.772-cp38-cp38-linux_x86_64.whl'>torch_mlir-20230309.772-cp38-cp38-linux_x86_64.whl</a><br />
+    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20230309.772/torch_mlir_core-20230309.772-cp311-cp311-macosx_11_0_universal2.whl'>torch_mlir_core-20230309.772-cp311-cp311-macosx_11_0_universal2.whl</a><br />
+    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20230309.772/torch_mlir_core-20230309.772-cp311-cp311-manylinux_2_17_x86_64.manylinux2014_x86_64.whl'>torch_mlir_core-20230309.772-cp311-cp311-manylinux_2_17_x86_64.manylinux2014_x86_64.whl</a><br />
+    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20230309.772/torch_mlir_core-20230309.772-cp311-cp311-win_amd64.whl'>torch_mlir_core-20230309.772-cp311-cp311-win_amd64.whl</a><br />
     <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20230308.771/torch-2.1.0.dev20230307%2Bcpu-cp310-cp310-linux_x86_64.whl'>torch-2.1.0.dev20230307+cpu-cp310-cp310-linux_x86_64.whl</a><br />
     <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20230308.771/torch-2.1.0.dev20230307%2Bcpu-cp311-cp311-linux_x86_64.whl'>torch-2.1.0.dev20230307+cpu-cp311-cp311-linux_x86_64.whl</a><br />
     <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20230308.771/torch-2.1.0.dev20230307%2Bcpu-cp311-cp311-win_amd64.whl'>torch-2.1.0.dev20230307+cpu-cp311-cp311-win_amd64.whl</a><br />
@@ -270,7 +283,5 @@
     <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20230213.748/torch-2.0.0.dev20230212-cp311-none-macosx_10_9_x86_64.whl'>torch-2.0.0.dev20230212-cp311-none-macosx_10_9_x86_64.whl</a><br />
     <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20230213.748/torch_mlir-20230213.748-cp311-cp311-macosx_11_0_universal2.whl'>torch_mlir-20230213.748-cp311-cp311-macosx_11_0_universal2.whl</a><br />
     <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20230213.748/torch_mlir-20230213.748-cp311-cp311-win_amd64.whl'>torch_mlir-20230213.748-cp311-cp311-win_amd64.whl</a><br />
-    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20230212.747/torch-2.0.0.dev20230211-cp311-none-macosx_10_9_x86_64.whl'>torch-2.0.0.dev20230211-cp311-none-macosx_10_9_x86_64.whl</a><br />
-    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20230212.747/torch_mlir-20230212.747-cp311-cp311-macosx_11_0_universal2.whl'>torch_mlir-20230212.747-cp311-cp311-macosx_11_0_universal2.whl</a><br />
   </body>
 </html>
